Add mode REST endpoint
